commit demo for es

--- a/src/main/resources/commons.properties
+++ b/src/main/resources/commons.properties
@@ -6,11 +6,11 @@ hbase.zookeeper.quorum=172.16.7.135:2181,172.16.7.136:2181,172.16.7.137:2181
 hbase.rootdir=hdfs://172.16.7.109:8020/hbase
 
 #es
-clusterName=myes
+clusterName=wisedu
 inetAddress=114.55.253.15
 httpPort=9200
 rpcPort=9300
-replicas=5
+replicas=1
 shards=5
 refreshInterval=300s
 
