--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,23 @@
             <version>3.4.6</version>
         </dependency>
 
+        <!--curator-->
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-recipes</artifactId>
+            <scope>provided</scope>
+            <!--<version>3.2.1</version>-->
+            <version>2.5.0</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.github.sgroschupf</groupId>
+            <artifactId>zkclient</artifactId>
+            <version>0.1</version>
+        </dependency>
+
+
     </dependencies>
 
 
