test hivejdbc commit

--- a/src/main/resources/commons.properties
+++ b/src/main/resources/commons.properties
@@ -6,19 +6,26 @@ hbase.zookeeper.quorum=172.16.7.135:2181,172.16.7.136:2181,172.16.7.137:2181
 hbase.rootdir=hdfs://172.16.7.109:8020/hbase
 
 #es
-clusterName=wisedu
-inetAddress=121.40.129.155
+clusterName=zyuc-elasticsearch
+inetAddress=192.168.130.75
 httpPort=9200
 rpcPort=9300
 replicas=1
-shards=5
+shards=1
 refreshInterval=300s
 
 #spark
-spark.thrift.username=hive
-spark.thrift.password=hive
-spark.thrift.port=10002
-spark.thrift.ip=172.16.7.135
+spark.thrift.username=root
+spark.thrift.password=123456
+spark.thrift.port=10000
+spark.thrift.ip=192.168.0.106
+
+#hive
+hive.thrift.username=root
+hive.thrift.password=123456
+hive.thrift.port=10000
+hive.thrift.ip=192.168.130.14
+
 
 #zk
 connectString=114.55.253.15:2181
