--- a/src/main/resources/commons.properties
+++ b/src/main/resources/commons.properties
@@ -2,8 +2,8 @@
 hdfs.data.center=/
 
 #hbase
-hbase.zookeeper.quorum=172.16.7.135:2181,172.16.7.136:2181,172.16.7.137:2181
-hbase.rootdir=hdfs://172.16.7.109:8020/hbase
+hbase.zookeeper.quorum=192.168.130.14:2181
+hbase.rootdir=hdfs://192.168.130.14:9000/hbase
 
 #es
 clusterName=zyuc-elasticsearch
@@ -28,7 +28,7 @@ hive.thrift.ip=192.168.130.14
 
 
 #zk
-connectString=114.55.253.15:2181
+connectString=127.0.0.1
 sessionTimeOut=20000
-groupPath=/disLocks
-subPath =/disLocks/sub
+groupPath=/ROOT_LOCK
+subPath =/zk-huey
