--- a/pom.xml
+++ b/pom.xml
@@ -31,11 +31,22 @@
         </dependency>
         <!-- hive end -->
 
-       <!--es-->
+       <!--es
         <dependency>
             <groupId>org.elasticsearch</groupId>
             <artifactId>elasticsearch</artifactId>
             <version>2.4.2</version>
+        </dependency>-->
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>transport</artifactId>
+            <version>5.1.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>x-pack-transport</artifactId>
+            <version>5.1.1</version>
         </dependency>
 
 
@@ -208,10 +219,7 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
-
-
     </dependencies>
-
 
     <build>
         <plugins>
